<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.OrderActivity">
    <ImageView
        android:id="@+id/imv_item_food"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/drink" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imv_item_food"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp">


        <TextView
            android:id="@+id/tv_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:maxWidth="@dimen/_200sdp"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/tv_price_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_name_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_item"/>

        <TextView
            android:id="@+id/tv_title_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_item"/>

        <EditText
            android:id="@+id/tv_note_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/note_for_store"
            android:textSize="@dimen/_14sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_item"
            android:drawablePadding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:background="@null"
            android:focusable="false"
            android:textColorHint="@color/grey_secondary"
            app:drawableLeftCompat="@drawable/ic_baseline_description_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <ImageButton
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_horizontal_rule_24"
                android:background="@drawable/custom_btn"
                android:contentDescription="@string/giam"
                android:layout_marginEnd="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/number_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/custom_btn"
                android:contentDescription="@string/tang"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_cart"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_5sdp"
                android:backgroundTint="@color/blue_primary"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"/>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>