<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_primary"
    tools:context=".activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <ImageView
                    android:id="@+id/imv_menu"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_baseline_menu_24"
                    android:contentDescription="@string/app_name"
                    android:layout_margin="@dimen/_5sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_1sdp">
                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center"
                    android:hint="@string/search_store_or_product"
                    android:textColorHint="@color/grey_secondary"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/cus_search" />
            </LinearLayout>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey_primary"
                    android:orientation="vertical"
                    tools:context=".activity.MainActivity">

                    <LinearLayout
                        android:id="@+id/banner_ads"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/white"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/view_banner_ads"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_100sdp"
                            android:paddingStart="@dimen/_20sdp"
                            android:paddingEnd="@dimen/_20sdp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quanh_day_co_gi_ngon"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:padding="@dimen/_10sdp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycle_list_food"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
</LinearLayout>